Java 11 - distroless container
- Updated dependencies